--- a/reference-code/LogicFlow/core/package.json
+++ b/reference-code/LogicFlow/core/package.json
@@ -35,6 +35,7 @@
   ],
   "dependencies": {
     "@types/mousetrap": "^1.6.4",
+    "babel-eslint": "^10.1.0",
     "mousetrap": "^1.6.5",
     "preact": "^10.4.8"
   },
